FbsParser/generated/FlatBuffersParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from FlatBuffers.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace FbsParser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class FlatBuffersParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		ATTRIBUTE=1, ENUM=2, FILE_EXTENSION=3, FILE_IDENTIFIER=4, INCLUDE=5, NATIVE_INCLUDE=6, 
		NAMESPACE=7, ROOT_TYPE=8, RPC_SERVICE=9, STRUCT=10, TABLE=11, UNION=12, 
		SEMI=13, EQ=14, LP=15, RP=16, LB=17, RB=18, LC=19, RC=20, DOT=21, COMMA=22, 
		COLON=23, PLUS=24, MINUS=25, STRING_CONSTANT=26, BASE_TYPE_NAME=27, IDENT=28, 
		HEX_INTEGER_CONSTANT=29, INTEGER_CONSTANT=30, FLOAT_CONSTANT=31, BLOCK_COMMENT=32, 
		COMMENT=33, WS=34;
	public const int
		RULE_schema = 0, RULE_include_ = 1, RULE_namespace_decl = 2, RULE_attribute_decl = 3, 
		RULE_type_decl = 4, RULE_enum_decl = 5, RULE_union_decl = 6, RULE_root_decl = 7, 
		RULE_field_decl = 8, RULE_rpc_decl = 9, RULE_rpc_method = 10, RULE_type_ = 11, 
		RULE_enumval_decl = 12, RULE_commasep_enumval_decl = 13, RULE_unionval_with_opt_alias = 14, 
		RULE_commasep_unionval_with_opt_alias = 15, RULE_ident_with_opt_single_value = 16, 
		RULE_commasep_ident_with_opt_single_value = 17, RULE_metadata = 18, RULE_scalar = 19, 
		RULE_object_ = 20, RULE_ident_with_value = 21, RULE_commasep_ident_with_value = 22, 
		RULE_single_value = 23, RULE_value = 24, RULE_commasep_value = 25, RULE_file_extension_decl = 26, 
		RULE_file_identifier_decl = 27, RULE_ns_ident = 28, RULE_integer_const = 29, 
		RULE_identifier = 30, RULE_keywords = 31;
	public static readonly string[] ruleNames = {
		"schema", "include_", "namespace_decl", "attribute_decl", "type_decl", 
		"enum_decl", "union_decl", "root_decl", "field_decl", "rpc_decl", "rpc_method", 
		"type_", "enumval_decl", "commasep_enumval_decl", "unionval_with_opt_alias", 
		"commasep_unionval_with_opt_alias", "ident_with_opt_single_value", "commasep_ident_with_opt_single_value", 
		"metadata", "scalar", "object_", "ident_with_value", "commasep_ident_with_value", 
		"single_value", "value", "commasep_value", "file_extension_decl", "file_identifier_decl", 
		"ns_ident", "integer_const", "identifier", "keywords"
	};

	private static readonly string[] _LiteralNames = {
		null, "'attribute'", "'enum'", "'file_extension'", "'file_identifier'", 
		"'include'", "'native_include'", "'namespace'", "'root_type'", "'rpc_service'", 
		"'struct'", "'table'", "'union'", "';'", "'='", "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "'.'", "','", "':'", "'+'", "'-'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "ATTRIBUTE", "ENUM", "FILE_EXTENSION", "FILE_IDENTIFIER", "INCLUDE", 
		"NATIVE_INCLUDE", "NAMESPACE", "ROOT_TYPE", "RPC_SERVICE", "STRUCT", "TABLE", 
		"UNION", "SEMI", "EQ", "LP", "RP", "LB", "RB", "LC", "RC", "DOT", "COMMA", 
		"COLON", "PLUS", "MINUS", "STRING_CONSTANT", "BASE_TYPE_NAME", "IDENT", 
		"HEX_INTEGER_CONSTANT", "INTEGER_CONSTANT", "FLOAT_CONSTANT", "BLOCK_COMMENT", 
		"COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FlatBuffers.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static FlatBuffersParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FlatBuffersParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FlatBuffersParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class SchemaContext : ParserRuleContext {
		public Include_Context[] include_() {
			return GetRuleContexts<Include_Context>();
		}
		public Include_Context include_(int i) {
			return GetRuleContext<Include_Context>(i);
		}
		public Namespace_declContext[] namespace_decl() {
			return GetRuleContexts<Namespace_declContext>();
		}
		public Namespace_declContext namespace_decl(int i) {
			return GetRuleContext<Namespace_declContext>(i);
		}
		public Type_declContext[] type_decl() {
			return GetRuleContexts<Type_declContext>();
		}
		public Type_declContext type_decl(int i) {
			return GetRuleContext<Type_declContext>(i);
		}
		public Enum_declContext[] enum_decl() {
			return GetRuleContexts<Enum_declContext>();
		}
		public Enum_declContext enum_decl(int i) {
			return GetRuleContext<Enum_declContext>(i);
		}
		public Union_declContext[] union_decl() {
			return GetRuleContexts<Union_declContext>();
		}
		public Union_declContext union_decl(int i) {
			return GetRuleContext<Union_declContext>(i);
		}
		public Root_declContext[] root_decl() {
			return GetRuleContexts<Root_declContext>();
		}
		public Root_declContext root_decl(int i) {
			return GetRuleContext<Root_declContext>(i);
		}
		public File_extension_declContext[] file_extension_decl() {
			return GetRuleContexts<File_extension_declContext>();
		}
		public File_extension_declContext file_extension_decl(int i) {
			return GetRuleContext<File_extension_declContext>(i);
		}
		public File_identifier_declContext[] file_identifier_decl() {
			return GetRuleContexts<File_identifier_declContext>();
		}
		public File_identifier_declContext file_identifier_decl(int i) {
			return GetRuleContext<File_identifier_declContext>(i);
		}
		public Attribute_declContext[] attribute_decl() {
			return GetRuleContexts<Attribute_declContext>();
		}
		public Attribute_declContext attribute_decl(int i) {
			return GetRuleContext<Attribute_declContext>(i);
		}
		public Rpc_declContext[] rpc_decl() {
			return GetRuleContexts<Rpc_declContext>();
		}
		public Rpc_declContext rpc_decl(int i) {
			return GetRuleContext<Rpc_declContext>(i);
		}
		public Object_Context[] object_() {
			return GetRuleContexts<Object_Context>();
		}
		public Object_Context object_(int i) {
			return GetRuleContext<Object_Context>(i);
		}
		public SchemaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_schema; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterSchema(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitSchema(this);
		}
	}

	[RuleVersion(0)]
	public SchemaContext schema() {
		SchemaContext _localctx = new SchemaContext(Context, State);
		EnterRule(_localctx, 0, RULE_schema);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==INCLUDE || _la==NATIVE_INCLUDE) {
				{
				{
				State = 64; include_();
				}
				}
				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 82;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ATTRIBUTE) | (1L << ENUM) | (1L << FILE_EXTENSION) | (1L << FILE_IDENTIFIER) | (1L << NAMESPACE) | (1L << ROOT_TYPE) | (1L << RPC_SERVICE) | (1L << STRUCT) | (1L << TABLE) | (1L << UNION) | (1L << LC))) != 0)) {
				{
				State = 80;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NAMESPACE:
					{
					State = 70; namespace_decl();
					}
					break;
				case STRUCT:
				case TABLE:
					{
					State = 71; type_decl();
					}
					break;
				case ENUM:
					{
					State = 72; enum_decl();
					}
					break;
				case UNION:
					{
					State = 73; union_decl();
					}
					break;
				case ROOT_TYPE:
					{
					State = 74; root_decl();
					}
					break;
				case FILE_EXTENSION:
					{
					State = 75; file_extension_decl();
					}
					break;
				case FILE_IDENTIFIER:
					{
					State = 76; file_identifier_decl();
					}
					break;
				case ATTRIBUTE:
					{
					State = 77; attribute_decl();
					}
					break;
				case RPC_SERVICE:
					{
					State = 78; rpc_decl();
					}
					break;
				case LC:
					{
					State = 79; object_();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Include_Context : ParserRuleContext {
		public ITerminalNode STRING_CONSTANT() { return GetToken(FlatBuffersParser.STRING_CONSTANT, 0); }
		public ITerminalNode SEMI() { return GetToken(FlatBuffersParser.SEMI, 0); }
		public ITerminalNode INCLUDE() { return GetToken(FlatBuffersParser.INCLUDE, 0); }
		public ITerminalNode NATIVE_INCLUDE() { return GetToken(FlatBuffersParser.NATIVE_INCLUDE, 0); }
		public Include_Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_include_; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterInclude_(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitInclude_(this);
		}
	}

	[RuleVersion(0)]
	public Include_Context include_() {
		Include_Context _localctx = new Include_Context(Context, State);
		EnterRule(_localctx, 2, RULE_include_);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85;
			_la = TokenStream.LA(1);
			if ( !(_la==INCLUDE || _la==NATIVE_INCLUDE) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 86; Match(STRING_CONSTANT);
			State = 87; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Namespace_declContext : ParserRuleContext {
		public ITerminalNode NAMESPACE() { return GetToken(FlatBuffersParser.NAMESPACE, 0); }
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public ITerminalNode SEMI() { return GetToken(FlatBuffersParser.SEMI, 0); }
		public ITerminalNode[] DOT() { return GetTokens(FlatBuffersParser.DOT); }
		public ITerminalNode DOT(int i) {
			return GetToken(FlatBuffersParser.DOT, i);
		}
		public Namespace_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace_decl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterNamespace_decl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitNamespace_decl(this);
		}
	}

	[RuleVersion(0)]
	public Namespace_declContext namespace_decl() {
		Namespace_declContext _localctx = new Namespace_declContext(Context, State);
		EnterRule(_localctx, 4, RULE_namespace_decl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89; Match(NAMESPACE);
			State = 90; identifier();
			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DOT) {
				{
				{
				State = 91; Match(DOT);
				State = 92; identifier();
				}
				}
				State = 97;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 98; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Attribute_declContext : ParserRuleContext {
		public ITerminalNode ATTRIBUTE() { return GetToken(FlatBuffersParser.ATTRIBUTE, 0); }
		public ITerminalNode STRING_CONSTANT() { return GetToken(FlatBuffersParser.STRING_CONSTANT, 0); }
		public ITerminalNode SEMI() { return GetToken(FlatBuffersParser.SEMI, 0); }
		public Attribute_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attribute_decl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterAttribute_decl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitAttribute_decl(this);
		}
	}

	[RuleVersion(0)]
	public Attribute_declContext attribute_decl() {
		Attribute_declContext _localctx = new Attribute_declContext(Context, State);
		EnterRule(_localctx, 6, RULE_attribute_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; Match(ATTRIBUTE);
			State = 101; Match(STRING_CONSTANT);
			State = 102; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_declContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public MetadataContext metadata() {
			return GetRuleContext<MetadataContext>(0);
		}
		public ITerminalNode LC() { return GetToken(FlatBuffersParser.LC, 0); }
		public ITerminalNode RC() { return GetToken(FlatBuffersParser.RC, 0); }
		public ITerminalNode TABLE() { return GetToken(FlatBuffersParser.TABLE, 0); }
		public ITerminalNode STRUCT() { return GetToken(FlatBuffersParser.STRUCT, 0); }
		public Field_declContext[] field_decl() {
			return GetRuleContexts<Field_declContext>();
		}
		public Field_declContext field_decl(int i) {
			return GetRuleContext<Field_declContext>(i);
		}
		public Type_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_decl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterType_decl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitType_decl(this);
		}
	}

	[RuleVersion(0)]
	public Type_declContext type_decl() {
		Type_declContext _localctx = new Type_declContext(Context, State);
		EnterRule(_localctx, 8, RULE_type_decl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			_la = TokenStream.LA(1);
			if ( !(_la==STRUCT || _la==TABLE) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 105; identifier();
			State = 106; metadata();
			State = 107; Match(LC);
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ATTRIBUTE) | (1L << ENUM) | (1L << FILE_EXTENSION) | (1L << FILE_IDENTIFIER) | (1L << INCLUDE) | (1L << NATIVE_INCLUDE) | (1L << NAMESPACE) | (1L << ROOT_TYPE) | (1L << RPC_SERVICE) | (1L << STRUCT) | (1L << TABLE) | (1L << UNION) | (1L << IDENT))) != 0)) {
				{
				{
				State = 108; field_decl();
				}
				}
				State = 113;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 114; Match(RC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Enum_declContext : ParserRuleContext {
		public ITerminalNode ENUM() { return GetToken(FlatBuffersParser.ENUM, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public MetadataContext metadata() {
			return GetRuleContext<MetadataContext>(0);
		}
		public ITerminalNode LC() { return GetToken(FlatBuffersParser.LC, 0); }
		public Commasep_enumval_declContext commasep_enumval_decl() {
			return GetRuleContext<Commasep_enumval_declContext>(0);
		}
		public ITerminalNode RC() { return GetToken(FlatBuffersParser.RC, 0); }
		public ITerminalNode COLON() { return GetToken(FlatBuffersParser.COLON, 0); }
		public Type_Context type_() {
			return GetRuleContext<Type_Context>(0);
		}
		public Enum_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enum_decl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterEnum_decl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitEnum_decl(this);
		}
	}

	[RuleVersion(0)]
	public Enum_declContext enum_decl() {
		Enum_declContext _localctx = new Enum_declContext(Context, State);
		EnterRule(_localctx, 10, RULE_enum_decl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116; Match(ENUM);
			State = 117; identifier();
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COLON) {
				{
				State = 118; Match(COLON);
				State = 119; type_();
				}
			}

			State = 122; metadata();
			State = 123; Match(LC);
			State = 124; commasep_enumval_decl();
			State = 125; Match(RC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Union_declContext : ParserRuleContext {
		public ITerminalNode UNION() { return GetToken(FlatBuffersParser.UNION, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public MetadataContext metadata() {
			return GetRuleContext<MetadataContext>(0);
		}
		public ITerminalNode LC() { return GetToken(FlatBuffersParser.LC, 0); }
		public Commasep_unionval_with_opt_aliasContext commasep_unionval_with_opt_alias() {
			return GetRuleContext<Commasep_unionval_with_opt_aliasContext>(0);
		}
		public ITerminalNode RC() { return GetToken(FlatBuffersParser.RC, 0); }
		public Union_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_union_decl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterUnion_decl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitUnion_decl(this);
		}
	}

	[RuleVersion(0)]
	public Union_declContext union_decl() {
		Union_declContext _localctx = new Union_declContext(Context, State);
		EnterRule(_localctx, 12, RULE_union_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127; Match(UNION);
			State = 128; identifier();
			State = 129; metadata();
			State = 130; Match(LC);
			State = 131; commasep_unionval_with_opt_alias();
			State = 132; Match(RC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Root_declContext : ParserRuleContext {
		public ITerminalNode ROOT_TYPE() { return GetToken(FlatBuffersParser.ROOT_TYPE, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode SEMI() { return GetToken(FlatBuffersParser.SEMI, 0); }
		public Root_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root_decl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterRoot_decl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitRoot_decl(this);
		}
	}

	[RuleVersion(0)]
	public Root_declContext root_decl() {
		Root_declContext _localctx = new Root_declContext(Context, State);
		EnterRule(_localctx, 14, RULE_root_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134; Match(ROOT_TYPE);
			State = 135; identifier();
			State = 136; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Field_declContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode COLON() { return GetToken(FlatBuffersParser.COLON, 0); }
		public Type_Context type_() {
			return GetRuleContext<Type_Context>(0);
		}
		public MetadataContext metadata() {
			return GetRuleContext<MetadataContext>(0);
		}
		public ITerminalNode SEMI() { return GetToken(FlatBuffersParser.SEMI, 0); }
		public ITerminalNode EQ() { return GetToken(FlatBuffersParser.EQ, 0); }
		public ScalarContext scalar() {
			return GetRuleContext<ScalarContext>(0);
		}
		public Field_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_field_decl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterField_decl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitField_decl(this);
		}
	}

	[RuleVersion(0)]
	public Field_declContext field_decl() {
		Field_declContext _localctx = new Field_declContext(Context, State);
		EnterRule(_localctx, 16, RULE_field_decl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138; identifier();
			State = 139; Match(COLON);
			State = 140; type_();
			State = 143;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EQ) {
				{
				State = 141; Match(EQ);
				State = 142; scalar();
				}
			}

			State = 145; metadata();
			State = 146; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
